--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://user:Jm63cOs1hUU88aH7@cluster0.pxalg.mongodb.net/Workout?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://user:71kMVzwzKpG8ckgY@cluster0.pxalg.mongodb.net/Workout?retryWrites=true&w=majority
